--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
     <uses-permission android:name="android.permission.GET_TASKS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
-
+    <!--保持CPU 运转，屏幕和键盘灯有可能是关闭的,用于文件上传和下载 -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <!--百度定位-->
     <!-- 这个权限用于进行网络定位-->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
@@ -44,7 +45,7 @@
     <application
         android:name=".SFApp"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity android:name=".NYHomeActivity">
@@ -56,7 +57,11 @@
         </activity>
 
         <activity android:name=".VideoPlayActivity"/>
-        <activity android:name=".tiantu.ActivityPhotoPreview"/>
+        <activity android:name=".NYLoginActivity"/>
+        <activity android:name=".NYRegisterActivity"/>
+        <activity android:name=".tiantu.ActivityPhotoPreview"
+
+            />
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
