--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:2.1.3'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,6 +17,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        //bmod sdk repository
+        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
         maven {
             url "https://raw.githubusercontent.com/xieningtao/mavenRepo/master/"
         }
