--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion '21.1.2'
+    buildToolsVersion '25.0.0'
 
     defaultConfig {
         applicationId "com.xnt.fun"
@@ -36,6 +36,7 @@ android {
         }
 
         debug {
+            signingConfig signingConfigs.release_debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -52,23 +53,23 @@ dependencies {
     compile 'com.google.android:android:4.1.1.4@jar'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4@jar'
 //    compile 'com.google.code.gson:gson:2.2.4@jar'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
+//    compile 'com.android.support:recyclerview-v7:22.2.0'
     //compile 'com.android.support:leanback-v17:22.2.0'
     compile 'com.android.support:support-v4:22.0.0@aar'
     compile 'com.android.support:support-v13:22.0.0@aar'
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile "com.android.support:cardview-v7:22.2.0"
-    compile "com.sf.core:base_sf_core:1.0.0@aar"
+    compile "com.sf.core:base_sf_core:1.0.2@aar"
     //compile "com.sf.core:android_tv:1.0.0@aar"
     compile "com.sf.core:emoji_lib:1.0.0@aar"
     compile "com.sf.core:http_client:1.0.0@aar"
     compile "com.sf.core:opengl_lib:1.0.0@aar"
-    compile("com.sf.core:sf_umeng_lib:1.0.0@aar")
+    compile("com.sf.core:sf_umeng_lib:1.0.1@aar")
     compile "com.sf.core:sf_pay_lib:1.0.0@aar"
     compile "com.sf.core:sf_circle_lib:1.0.0@aar"
     compile "com.sf.core:sfchat_lib:1.0.0@aar"
     compile "com.sf.core:sf_log_lib:1.0.0@aar"
-    compile "com.sf.core:sf_share_lib:1.0.0@aar"
+    compile "com.sf.core:sf_share_lib:1.0.1@aar"
     compile "com.sf.core:baidu_lib:1.0.0@aar"
     compile "com.sf.core:sf_db_lib:1.0.0@aar"
     compile "com.sf.core:sf_util_lib:1.0.0@aar"
