--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 23
+    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.xnt.fun"
@@ -43,45 +43,48 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile('io.socket:socket.io-client:0.6.3') {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation('io.socket:socket.io-client:0.6.3') {
         exclude group: 'org.json', module: 'json'
         exclude group: 'com.squareup.okhttp',module: 'okhttp'
     }
-//    compile "com.squareup.okhttp3:okhttp:3.2.0"
+//    implementation "com.squareup.okhttp3:okhttp:3.2.0"
 
-    compile 'com.google.android:android:4.1.1.4@jar'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.4@jar'
-//    compile 'com.google.code.gson:gson:2.2.4@jar'
-//    compile 'com.android.support:recyclerview-v7:22.2.0'
-    //compile 'com.android.support:leanback-v17:22.2.0'
-    compile 'com.android.support:support-v4:22.0.0@aar'
-    compile 'com.android.support:support-v13:22.0.0@aar'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
-    compile "com.android.support:cardview-v7:22.2.0"
-    compile "com.sf.core:base_sf_core:1.0.3@aar"
-    //compile "com.sf.core:android_tv:1.0.0@aar"
-    compile "com.sf.core:emoji_lib:1.0.0@aar"
-    compile "com.sf.core:http_client:1.0.0@aar"
-    compile "com.sf.core:opengl_lib:1.0.0@aar"
-    compile "com.sf.core:sf_umeng_lib:1.0.2@aar"
-    compile "com.sf.core:sf_pay_lib:1.0.0@aar"
-    compile "com.sf.core:sf_circle_lib:1.0.0@aar"
-    compile "com.sf.core:sfchat_lib:1.0.0@aar"
-    compile "com.sf.core:sf_log_lib:1.0.0@aar"
-    compile "com.sf.core:sf_share_lib:1.0.1@aar"
-    compile "com.sf.core:baidu_lib:1.0.0@aar"
-    compile "com.sf.core:sf_db_lib:1.0.0@aar"
-    compile "com.sf.core:sf_util_lib:1.0.0@aar"
-    compile "com.sf.core:reflection_lib:1.0.0@aar"
-    compile "com.sf.core:custom_view:1.0.0@aar"
-    compile "com.sf.core:pull_refresh_lib:1.0.0@aar"
+//    implementation 'com.google.android:android:4.1.1.4@jar'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.4@jar'
+//    implementation 'com.google.code.gson:gson:2.2.4@jar'
+//    implementation 'com.android.support:recyclerview-v7:22.2.0'
+    //implementation 'com.android.support:leanback-v17:22.2.0'
+    implementation 'com.android.support:support-v4:23.0.0@aar'
+    implementation 'com.android.support:support-v13:23.0.0@aar'
+    implementation 'com.android.support:recyclerview-v7:23.2.0'
+    implementation "com.android.support:cardview-v7:23.2.0"
+    implementation "com.sf.core:base_sf_core:1.0.3@aar"
+    //implementation "com.sf.core:android_tv:1.0.0@aar"
+    implementation "com.sf.core:emoji_lib:1.0.0@aar"
+    implementation "com.sf.core:http_client:1.0.0@aar"
+    implementation "com.sf.core:opengl_lib:1.0.0@aar"
+    implementation "com.sf.core:sf_umeng_lib:1.0.2@aar"
+    implementation "com.sf.core:sf_pay_lib:1.0.0@aar"
+    implementation "com.sf.core:sf_circle_lib:1.0.0@aar"
+    implementation "com.sf.core:sfchat_lib:1.0.0@aar"
+    implementation "com.sf.core:sf_log_lib:1.0.0@aar"
+    implementation "com.sf.core:sf_share_lib:1.0.1@aar"
+    implementation "com.sf.core:baidu_lib:1.0.0@aar"
+    implementation "com.sf.core:sf_db_lib:1.0.0@aar"
+    implementation "com.sf.core:sf_util_lib:1.0.0@aar"
+    implementation "com.sf.core:reflection_lib:1.0.0@aar"
+    implementation "com.sf.core:custom_view:1.0.0@aar"
+    implementation "com.sf.core:pull_refresh_lib:1.0.0@aar"
     //bmob sdk
     //以下SDK开发者请根据需要自行选择
     //bmob-sdk：Bmob的android sdk包，包含了Bmob的数据存储、文件等服务，以下是最新的bmob-sdk:
     //3.5.5：请务必查看下面注释[1]
-    compile 'cn.bmob.android:bmob-sdk:3.6.3'
+    implementation 'cn.bmob.android:bmob-sdk:3.6.3'
     //如果你想应用能够兼容Android6.0，请添加此依赖(org.apache.http.legacy.jar)
-    compile 'cn.bmob.android:http-legacy:1.0'
+    implementation 'cn.bmob.android:http-legacy:1.0'
+
+    //recycler_view，下拉刷新
+    implementation 'com.wuxiaolong.pullloadmorerecyclerview:library:1.1.2'
 
 }
