--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,10 @@ buildscript {
     
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.1.4'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -22,10 +23,13 @@ allprojects {
         maven {
             url "https://raw.githubusercontent.com/xieningtao/mavenRepo/master"
         }
+        google()
+        mavenCentral()
         jcenter()
         //bmod sdk repository
         maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
 
+        google()
     }
 }
 
