--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
 apply plugin: 'com.android.application'
 
+ext{
+    htextview_version ="0.1.6"
+}
 android {
-    compileSdkVersion 24
+    compileSdkVersion 27
     buildToolsVersion '27.0.3'
 
     defaultConfig {
@@ -10,6 +13,9 @@ android {
         multiDexEnabled true
         versionCode 1
         versionName "1.0"
+        ndk {
+            abiFilters 'armeabi'//, 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64'
+        }
     }
 
     sourceSets {
@@ -46,6 +52,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
     implementation('io.socket:socket.io-client:0.6.3') {
         exclude group: 'org.json', module: 'json'
         exclude group: 'com.squareup.okhttp',module: 'okhttp'
@@ -57,10 +64,10 @@ dependencies {
 //    implementation 'com.google.code.gson:gson:2.2.4@jar'
 //    implementation 'com.android.support:recyclerview-v7:22.2.0'
     //implementation 'com.android.support:leanback-v17:22.2.0'
-    implementation 'com.android.support:support-v4:23.0.0@aar'
-    implementation 'com.android.support:support-v13:23.0.0@aar'
-    implementation 'com.android.support:recyclerview-v7:23.2.0'
-    implementation "com.android.support:cardview-v7:23.2.0"
+    implementation 'com.android.support:support-v4:27.1.0@aar'
+    implementation 'com.android.support:support-v13:27.1.0@aar'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation "com.android.support:cardview-v7:27.1.0"
     implementation "com.sf.core:base_sf_core:1.0.3@aar"
     //implementation "com.sf.core:android_tv:1.0.0@aar"
     implementation "com.sf.core:emoji_lib:1.0.0@aar"
@@ -89,4 +96,25 @@ dependencies {
     //recycler_view，下拉刷新
     implementation 'com.wuxiaolong.pullloadmorerecyclerview:library:1.1.2'
 
+    //HText
+    implementation "com.hanks:htextview-base:$htextview_version"        // base library
+
+//    implementation "com.hanks:htextview-fade:$htextview_version"        // optional
+//    implementation "com.hanks:htextview-line:$htextview_version"        // optional
+//    implementation "com.hanks:htextview-rainbow:$htextview_version"     // optional
+    implementation "com.hanks:htextview-typer:$htextview_version"       // optional
+
+//    implementation "com.hanks:htextview-scale:$htextview_version"       // optional
+//    implementation "com.hanks:htextview-evaporate:$htextview_version"   // optional
+//    implementation "com.hanks:htextview-fall:$htextview_version"        // optional
+    //字体
+    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+
+    //animation
+    implementation 'com.android.support:support-compat:27.1.1'
+    implementation 'com.daimajia.easing:library:2.0@aar'
+    implementation 'com.daimajia.androidanimations:library:2.3@aar'
+
+    //viewPage transform
+    implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
 }
