--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,11 +52,10 @@
     <application
         android:name=".SFApp"
         android:allowBackup="true"
-        android:icon="@drawable/app_icon"
+        android:icon="@drawable/m_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-        <activity android:name=".NYHomeActivity"
-            android:windowSoftInputMode="stateHidden|adjustPan"
+        <activity android:name=".SplashActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"
             >
             <intent-filter>
@@ -66,6 +65,10 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".NYHomeActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
         <activity android:name=".VideoPlayActivity"/>
         <activity android:name=".NYLoginActivity"/>
         <activity android:name=".NYRegisterActivity"/>
