耽美模块添加评论

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,8 +76,12 @@
         <activity android:name=".NYNewsDetailActivity"/>
         <activity android:name=".NYFragmentContainerActivity"/>
         <activity android:name=".tiantu.ActivityPhotoPreview"/>
-        <activity android:name=".tiantu.NYPhotoShowActivity"/>
-        <activity android:name=".tiantu.NYBeautyShowActivity"/>
+        <activity android:name=".tiantu.NYPhotoShowActivity"
+            android:theme="@style/NYFullScree"
+            />
+        <activity android:name=".tiantu.NYBeautyShowActivity"
+            android:theme="@style/NYFullScree"
+            />
         <activity android:name="com.basesmartframe.pickphoto.ActivityFragmentContainer"/>
 
 
