添加svga和评论

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,4 +117,7 @@ dependencies {
 
     //viewPage transform
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32@aar'
+
+    //svga
+    implementation project(":svgalib")
 }
