--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
 //        maven {
 //            url "https://raw.githubusercontent.com/xieningtao/mavenRepo/master"
 //        }
+        maven { url 'https://jitpack.io' }
         maven {
             url "https://raw.githubusercontent.com/xieningtao/mavenRepo/master"
         }
