--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,9 +83,11 @@
         <activity android:name=".tiantu.ActivityPhotoPreview"/>
         <activity android:name=".tiantu.NYPhotoShowActivity"
             android:theme="@style/NYFullScree"
+            android:windowSoftInputMode="adjustResize"
             />
         <activity android:name=".tiantu.NYBeautyShowActivity"
             android:theme="@style/NYFullScree"
+            android:windowSoftInputMode="adjustResize"
             />
         <activity android:name="com.basesmartframe.pickphoto.ActivityFragmentContainer"/>
 
