--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
         android:allowBackup="true"
         android:icon="@drawable/m_logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/NYAppTheme">
 
         <activity android:name=".SplashActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar"
@@ -129,6 +129,17 @@
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="YUU3OEs7NiGfym3xlpUY2ymgWlLHtKPg"/>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.youmi.android.addemo.fileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true" >
+
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_provider" />
+        </provider >
     </application>
 
 </manifest>
