--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,27 @@
         <activity android:name="com.basesmartframe.pickphoto.ActivityFragmentContainer"/>
 
 
+        <!--tencent ad-->
+        <!-- targetSDKVersion >= 24时才需要添加这个 provider。provider 的 authorities 属性的值为 ${applicationId}.fileprovider，请开发者根据自己的 ${applicationId} 来设置这个值 -->
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/gdt_file_path" />
+        </provider>
+        <service android:name="com.qq.e.comm.DownloadService"
+            android:exported="false" />
+        <activity android:name="com.qq.e.ads.ADActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize" />
+        <activity android:name="com.qq.e.ads.PortraitADActivity"
+            android:screenOrientation="portrait"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize" />
+        <activity android:name="com.qq.e.ads.LandscapeADActivity"
+            android:screenOrientation="landscape"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize" />
         <!--分享-->
         <meta-data
             android:name="wei_xin_app_id"
@@ -157,16 +178,16 @@
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="YUU3OEs7NiGfym3xlpUY2ymgWlLHtKPg"/>
 
-        <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="com.youmi.android.addemo.fileProvider"
-            android:exported="false"
-            android:grantUriPermissions="true" >
+        <!--<provider-->
+            <!--android:name="android.support.v4.content.FileProvider"-->
+            <!--android:authorities="com.youmi.android.addemo.fileProvider"-->
+            <!--android:exported="false"-->
+            <!--android:grantUriPermissions="true" >-->
 
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_provider" />
-        </provider >
+            <!--<meta-data-->
+                <!--android:name="android.support.FILE_PROVIDER_PATHS"-->
+                <!--android:resource="@xml/file_provider" />-->
+        <!--</provider >-->
     </application>
 
 </manifest>
