--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,7 @@
         android:allowBackup="true"
         android:icon="@drawable/m_logo"
         android:label="@string/app_name"
+        android:testOnly="false"
         android:theme="@style/NYAppTheme">
 
         <activity android:name=".SplashActivity"
