--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+apply from: "config/config.gradle"
 buildscript {
     ext.kotlin_version = "1.1.60"
+
     repositories {
         jcenter()
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,16 +18,13 @@ buildscript {
 
 allprojects {
     repositories {
-//        maven {
-//            url "https://raw.githubusercontent.com/xieningtao/mavenRepo/master"
-//        }
+        jcenter()
+        mavenCentral()
         maven { url 'https://jitpack.io' }
         maven {
             url "https://raw.githubusercontent.com/xieningtao/mavenRepo/master"
         }
         google()
-        mavenCentral()
-        jcenter()
         //bmod sdk repository
         maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
     }
