--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation "com.android.support:multidex:1.0.3"
     //support package
     implementation "com.android.support:support-v4:${config.support_version}"
     implementation "com.android.support:support-v13:${config.support_version}"
@@ -43,6 +43,7 @@ dependencies {
     implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
 
     //1.1.0 （1.0.5及以前版本的老用户升级需谨慎，API改动过大）
+    //下拉刷新，上拉加载更多
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-28'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-28'//没有使用特殊Header，可以不加这行
     implementation "com.android.support:appcompat-v7:${config.support_version}"//版本 23以上（必须）
@@ -61,7 +62,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     //take photo and pick photo
     //doc https://github.com/crazycodeboy/TakePhoto
-    implementation 'com.jph.takephoto:takephoto_library:4.1.0'
+    implementation 'org.devio.takephoto:takephoto_library:4.1.0'
 
     //event bus
     implementation 'org.greenrobot:eventbus:3.1.1'
@@ -70,4 +71,7 @@ dependencies {
     implementation 'jp.wasabeef:recyclerview-animators:3.0.0'
     //flowlayout,适合搜索标签
     implementation 'com.hyman:flowlayout-lib:1.1.2'
+
+    //utils
+    implementation "com.sf.core:sf_util_lib:1.0.0@aar"
 }
